--- a/js-projeto-de-vida-codigo-base/index.html
+++ b/js-projeto-de-vida-codigo-base/index.html
@@ -10,13 +10,33 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+        <h2 class="titulo-principal">Meus Objetivos até ano que vem<span>_</span></h2>
+        <div class="conteudo">
         <div class="botoes">
-            <button class="botao ativo">Cursos na Alura</button>
-            <button class="botao">Criar projetos em Javascript</button>
-            <button class="botao">Criar um portfolio</button>
-            <button class="botao">Atualizar meu currículo</button>
+            <button class="botao ativo">Sair da escola</button>
+            <button class="botao">Passar em uma faculdade</button>
+            <button class="botao">Sair de casa</button>
+            <button class="botao">Tirar minha carteira</button>
         </div>
+        <div class="abas-textos">
+      <div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal">Sair da escola</h3>
+            <h4 class="aba-conteudo-titulo-secundario">tempo para completar meu objetivo</h4>
+        </div>
+        <div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal">Passar em uma faculdade</h3>
+            <h4 class="aba-conteudo-titulo-secundario">tempo para completar meu objetivo</h4>
+        </div>
+        <div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal">Sair de casa</h3>
+            <h4 class="aba-conteudo-titulo-secundario">tempo para completar meu objetivo</h4>
+        </div>
+        <div class="aba-conteudo">
+            <h3 class="aba-conteudo-titulo-principal">Tirar minha carteira</h3>
+            <h4 class="aba-conteudo-titulo-secundario">tempo para completar meu objetivo</h4>
+        </div>
+     </div>
+    </div>
     </section>
     <script src="main.js"></script>
 </body>
