--- a/js-projeto-de-vida-codigo-base/index.html
+++ b/js-projeto-de-vida-codigo-base/index.html
@@ -10,32 +10,32 @@
 
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-principal">Meus Objetivos até ano que vem<span>_</span></h2>
+        <h2 class="titulo-principal">Meus Objetivos de vida até 2030<span>_</span></h2>
         <div class="conteudo">
         <div class="botoes">
-            <button class="botao ativo">Sair da escola</button>
-            <button class="botao">Passar em uma faculdade</button>
-            <button class="botao">Sair de casa</button>
-            <button class="botao">Tirar minha carteira</button>
+            <button class="botao ativo">Passar na faculdade</button>
+            <button class="botao">Aprender inglês</button>
+            <button class="botao">Ir para outro país</button>
+            <button class="botao">Terminar a minha faculdade</button>
         </div>
-        <div class="abas-textos">
-      <div class="aba-conteudo">
-            <h3 class="aba-conteudo-titulo-principal">Sair da escola</h3>
-            <h4 class="aba-conteudo-titulo-secundario">tempo para completar meu objetivo</h4>
+        <div class="aba-texto">
+            <div class="aba-conteudo ativo">
+                <h3 class="aba-conteudo-titulo-principal">Passar na faculdade</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para comtemplar meu objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Aprender inglês</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para comtemplar meu objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Ir pra outro país</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para comtemplar meu objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">Terminar a minha faculdade</h3>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para comtemplar meu objetivo</h4>
+            </div>
         </div>
-        <div class="aba-conteudo">
-            <h3 class="aba-conteudo-titulo-principal">Passar em uma faculdade</h3>
-            <h4 class="aba-conteudo-titulo-secundario">tempo para completar meu objetivo</h4>
-        </div>
-        <div class="aba-conteudo">
-            <h3 class="aba-conteudo-titulo-principal">Sair de casa</h3>
-            <h4 class="aba-conteudo-titulo-secundario">tempo para completar meu objetivo</h4>
-        </div>
-        <div class="aba-conteudo">
-            <h3 class="aba-conteudo-titulo-principal">Tirar minha carteira</h3>
-            <h4 class="aba-conteudo-titulo-secundario">tempo para completar meu objetivo</h4>
-        </div>
-     </div>
     </div>
     </section>
     <script src="main.js"></script>
